--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
                 
             </ul>
         </nav>
+        <!-- Banner start -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-subtitle">Hi, i am</h3>
+                <h1 class="banner-title">Marry Hardy</h1>
+                <p class=" banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download Cv</button>
+                <!-- <button class="btn-secondary">Contact</button> -->
+            </div>
+                <img src="images/hardy.png" alt="">
+        </div>
     </div>
 
     <div class="main">
