--- a/index.html
+++ b/index.html
@@ -155,17 +155,38 @@
                 <!-- My Education Experience Start -->
             </div>
             <div class="resume-button">
-                <button class="btn-primary cv">Download Cv</button>
-                </div>
+                <button class="btn-primary">Download Cv</button>
+            </div>
         </section>
         
     <!-- Resume  Section end-->
-
+    
     </div>
    
     <!-- Main End -->
     <div class="foooter">
-
+        <!-- Contact Section Section Start -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Let's Connct Me</h3>
+                <p class="education-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="social-media">
+                    <img src="../images/icons/facebook.png" alt="">
+                    <img src="../images/icons/twitter.png" alt="">
+                    <img src="../images/icons/insta.png" alt="">
+                </div>
+            </div>
+            <div>
+                <h3 class="section-title">Let's Message Me</h3>
+                <form >
+                    <input type="text" placeholder="your name">
+                <input type="email" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Text Area"></textarea>
+                <input type="submit" class="btn-primary" value="Submit">
+                </form>
+            </div>
+        </section>
+        <!-- Contact Section Section Start -->
     </div>
 </body>
 </html>
