--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First portfolio Website</title>
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/94f105bfda.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header start -->
@@ -26,7 +27,7 @@
                 <h3 class="banner-subtitle">Hi, i am</h3>
                 <h1 class="banner-title">Marry Hardy</h1>
                 <p class=" banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download Cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>Download Cv</button>
                 <!-- <button class="btn-secondary">Contact</button> -->
             </div>
                 <img src="images/hardy.png" alt="">
@@ -155,7 +156,7 @@
                 <!-- My Education Experience Start -->
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download Cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>       Download Cv</button>
             </div>
         </section>
         
